--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sms-twilio",
   "version": "1.0.0",
-  "description": "",
+  "description": "SMS backend using Twilio",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
